<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MoveOrRenameCannotOccur</class>
 <widget class="QWidget" name="MoveOrRenameCannotOccur">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string notr="true"/>
  </property>
  <layout class="QVBoxLayout" name="layout">
   <property name="spacing">
    <number>7</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>11</number>
   </property>
   <property name="bottomMargin">
    <number>11</number>
   </property>
   <item>
    <widget class="QLabel" name="selectLabel">
     <property name="font">
      <font>
       <family>Lato 13</family>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Please select which version you want to keep</string>
     </property>
     <property name="indent">
      <number>0</number>
     </property>
     <property name="type" stdset="0">
      <string notr="true">primary</string>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeType">
      <enum>QSizePolicy::Fixed</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>0</width>
       <height>5</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QWidget" name="chooseContainer" native="true">
     <layout class="QVBoxLayout" name="chooseLayout">
      <property name="spacing">
       <number>12</number>
      </property>
      <property name="leftMargin">
       <number>1</number>
      </property>
      <property name="topMargin">
       <number>1</number>
      </property>
      <property name="rightMargin">
       <number>1</number>
      </property>
      <property name="bottomMargin">
       <number>1</number>
      </property>
      <item>
       <widget class="RemoteMoveOrRenameCannotOccurChooseWidget" name="chooseRemoteCopy" native="true"/>
      </item>
      <item>
       <widget class="LocalMoveOrRenameCannotOccurChooseWidget" name="chooseLocalCopy" native="true"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>LocalMoveOrRenameCannotOccurChooseWidget</class>
   <extends>QWidget</extends>
   <header>stalled_issues_cases/MoveOrRenameCannotOccurChooseWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>RemoteMoveOrRenameCannotOccurChooseWidget</class>
   <extends>QWidget</extends>
   <header>stalled_issues_cases/MoveOrRenameCannotOccurChooseWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
